--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 80 --disableHostCheck",
-    "build": "ng build",
+    "build": "ng build && cpx manifest.yml dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
