--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^3.7.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "cpx": "^1.5.0",
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
