--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
   - name: cc-chat-client
     memory: 256M
-    host: mew-client
+    host: mew-client-dev
     buildpack: staticfile_buildpack
 
