--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ng2-avatar": "^2.3.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "socket.io-client": "^2.2.0",
