--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "cpx": "^1.5.0",
+    "dotenv": "^7.0.0",
     "file-saver": "^2.0.1",
+    "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "ibm-watson": "^4.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
@@ -47,7 +50,7 @@
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
