--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@types/socket.io": "~2.1.2",
     "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "cpx": "^1.5.0",
-    "dotenv": "^7.0.0",
     "file-saver": "^2.0.1",
     "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
-    "ibm-watson": "^4.0.1",
+    "https": "^1.0.0",
     "jquery": "^3.3.1",
     "ng2-avatar": "^2.3.1",
     "popper.js": "^1.14.7",
@@ -48,6 +48,7 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/axios": "^0.14.0",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
