--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "cpx": "^1.5.0",
+    "crypto-js": "^3.1.9-1",
     "file-saver": "^2.0.1",
     "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
@@ -49,6 +50,7 @@
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/axios": "^0.14.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
