--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Michael Mew, Andreas Natter",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 80",
+    "start": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
     "build": "ng build && cpx manifest.yml dist",
+    "build:ssr": "ng run chat-client:server:dev",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,12 +20,15 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.14",
     "@angular/material": "^7.3.4",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/platform-server": "^7.2.14",
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free": "^5.8.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "@types/socket.io": "~2.1.2",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
@@ -36,7 +40,7 @@
     "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
     "https": "^1.0.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "ng2-avatar": "^2.3.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
