--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "author": "Michael Mew, Andreas Natter",
   "scripts": {
     "ng": "ng",
+    "start-server": "node ./dist/server.js",
     "start": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
-    "build": "ng build && cpx manifest.yml dist",
+    "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
+    "build-server": "npx tsc ./server/server.ts --outdir ./dist",
     "build:ssr": "ng run chat-client:server:dev",
     "test": "ng test",
     "lint": "ng lint",
@@ -34,17 +36,23 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "cpx": "^1.5.0",
     "crypto-js": "^3.1.9-1",
+    "express": "~4.16.4",
+    "express-enforces-ssl": "^1.1.0",
+    "express-force-https": "^1.0.0",
     "file-saver": "^2.0.1",
     "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "hsts": "^2.2.0",
     "https": "^1.0.0",
     "jquery": "^3.4.1",
     "ng2-avatar": "^2.3.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "socket.io-client": "^2.2.0",
+	"oidc-client": "^1.6.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -55,10 +63,11 @@
     "@angular/language-service": "~7.2.0",
     "@types/axios": "^0.14.0",
     "@types/crypto-js": "^3.1.43",
+    "@types/express": "~4.16.1",
     "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
+    "@types/node": "^8.10.48",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
