--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Michael Mew, Andreas Natter",
   "scripts": {
     "ng": "ng",
-    "start-server": "node ./dist/server.js",
-    "start": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
-    "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
+    "start": "node server.js",
+    "start-dev": "ng serve --host 0.0.0.0 --port 80",
+    "start-ssl": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
+    "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl",
     "build-prod": "ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
-    "build-server": "npx tsc ./server/server.ts --outdir ./dist",
     "build:ssr": "ng run chat-client:server:dev",
     "test": "ng test",
     "lint": "ng lint",
@@ -46,14 +46,15 @@
     "file-saver": "^2.0.1",
     "flag-icon-css": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "helmet": "^3.17.0",
     "hsts": "^2.2.0",
     "https": "^1.0.0",
     "jquery": "^3.4.1",
     "ng2-avatar": "^2.3.1",
+    "oidc-client": "^1.6.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "socket.io-client": "^2.2.0",
-	"oidc-client": "^1.6.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
