--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,8 @@
 applications:
   - name: cc-chat-client
-    memory: 256M
+    memory: 512M
     host: mew-client-dev
     buildpack: https://github.com/cloudfoundry/nodejs-buildpack
+    command: node server.js
 
 
