--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
     memory: 512M
     host: mew-client-dev
     buildpack: https://github.com/cloudfoundry/nodejs-buildpack
-    command: node server.js
+    command: npm start
 
 
