--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chat-client",
   "version": "1.0.0",
+  "main": "dist/server.js",
   "description": "Chat-Client for Cloud Computing exercise SS19",
   "author": "Michael Mew, Andreas Natter",
   "scripts": {
@@ -9,7 +10,7 @@
     "start-dev": "npx ng serve --host 0.0.0.0 --port 80",
     "start-ssl": "npx ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
     "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl",
-    "build-prod": "npx ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl",
+    "build-prod": "npx ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && cpx server.js dist",
     "build:ssr": "npx ng run chat-client:server:dev",
     "test": "ng test",
     "lint": "ng lint",
