--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "Michael Mew, Andreas Natter",
   "scripts": {
     "ng": "ng",
-    "start": "npm run build-prod && node server.js",
+    "start": "npm run build && node dist/server.js",
     "start-dev": "ng serve --host 0.0.0.0 --port 80",
     "start-ssl": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
     "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl",
-    "build-prod": "ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && cpx server.js dist",
-    "build:ssr": "npx ng run chat-client:server:dev",
+    "build-prod": "ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
+    "build-server": "npx tsc server/server.ts --outDir dist",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
