--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run build && node dist/server.js",
     "start-dev": "ng serve --host 0.0.0.0 --port 80",
     "start-ssl": "ng serve --host 0.0.0.0 --port 443 --ssl --ssl-key ./ssl/certificates/privatekey.pem  --ssl-cert ./ssl/certificate.crt",
-    "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl",
+    "build": "ng build && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
     "build-prod": "ng build --prod=true --aot=true && cpx manifest.yml dist && cpx ./ssl/**/*.* dist/ssl && npm run build-server",
     "build-server": "npx tsc server/server.ts --outDir dist",
     "test": "ng test",
